@@ -61,9 +61,9 @@ TodoTaskInputDialog.error.noSpace=Name can not start or end with a whitespace.
 
 CEditorPreferencePage.cCommentTaskTags=Task Tags
 
-CEditorPreferencePage.generalTabTitle=&General
+CEditorPreferencePage.generalTabTitle=Appeara&nce
 CEditorPreferencePage.annotationTabTitle= &Annotations
-CEditorPreferencePage.colorsTabTitle=&Colors
+CEditorPreferencePage.colorsTabTitle=Synta&x
 CEditorPreferencePage.contentAssistTabTitle=Content A&ssist
 
 CEditorPreferencePage.invalid_input=Invalid input.
