@@ -1,3 +1,11 @@
+2004-08-26 Alain Magloire
+	Be on the same length as the Java Editor and Ant Editor
+	for the Preference page.  Misc warning removes, when
+	raising the level of warnings from the compiler.
+
+	* src/org/eclipse/cdt/internal/ui/preference/CEditorPreferencePage.java
+	* src/org/eclipse/cdt/internal/ui/preference/PreferencesMessages.properties
+
 2004-08-25 Chris Wiebe
 
 	better handling of enclosing type
